--- a/css/finalize.css
+++ b/css/finalize.css
@@ -112,7 +112,7 @@ body span {
     padding-top: 16px;
 }
 
-#label{
+#label {
     position: absolute;
     top: 640px;
     margin-left: 520px;
@@ -120,7 +120,7 @@ body span {
     z-index: 2;
 }
 
-#bottom_left p{
+#bottom_left p {
     position: absolute;
     top: 1030px;
     margin-left: 35px;
@@ -128,3 +128,170 @@ body span {
     color: #FFFFFF;
 }
 
+#mid {
+    float: left;
+    margin-top: 33px;
+}
+
+#mid img {
+    margin-left: 35px;
+    float: left;
+}
+
+#mid_m {
+    margin-top: 33px;
+    margin-left: 38px;
+    float: left;
+}
+
+#mid_m p {
+    float: left;
+
+}
+
+#c_top {
+    font-size: 36px;
+    color: #333333;
+}
+
+#c_bottom {
+    margin-top: 13px;
+    font-size: 24px;
+    color: #999999;
+}
+
+#join_btn {
+    margin-top: 35px;
+    margin-left: 23px;
+    float: right;
+    padding: 21px 45px 22px 45px;
+}
+
+#bottom {
+    float: left;
+    width: 670px;
+}
+
+#bottom img {
+}
+
+#taste {
+    margin-top: 94px;
+    width: 32px;
+    z-index: 2;
+    position:relative;
+    right: 126px;
+}
+
+#shape {
+    margin-top: 94px;
+    position: relative;
+    width: 32px;
+    z-index: 2;
+    left: 128px;
+}
+
+#taste_bg {
+    z-index: -1;
+    width: 80px;
+    margin-left: 150px;
+    float: left;
+    margin-top: 67px;
+
+}
+
+#shape_bg {
+    z-index: -1;
+    margin-top: 67px;
+    width: 80px;
+    margin-right: 150px;
+    float: right;
+}
+
+#type{
+    margin-top: 13px;
+    float: left;
+    width: 670px;
+}
+
+#taste_t{
+    float: left;
+    margin-left: 166px;
+}
+
+#shape_t{
+    float: right;
+    margin-right: 166px;
+}
+
+#line_bg{
+    margin-top: 26px;
+    width: 670px;
+    margin-left: 45px;
+    float: left;
+    box-shadow: 0px 0px 18px 0px rgba(205,205,205,0.50);
+}
+#left_white_line{
+    width: 230px;
+    height: 14px;
+    float: left;
+}
+
+#right_pink_line{
+    width: 430px;
+    height:14px;
+    float: right;
+    background: #D3C9C6;
+}
+
+#line_text{
+    margin-top: 13px;
+    float: left;
+    margin-left: 45px;
+    width: 670px;
+    font-size: 26px;
+    color: #333333;
+}
+#left_text{
+    float: left;
+}
+#right_text{
+    float: right;
+}
+
+#bottom_group{
+    margin-left: 35px;
+    margin-top: 43px;
+    float: left;
+    width: 680px;
+}
+
+#bottom_group img{
+    width: 80px;
+}
+#bottom_img_left_one{
+    float: left;
+}
+.bottom_img_left{
+    float: left;
+    margin-left: 30px;
+}
+.bottom_img_right{
+    float: right;
+    margin-left: 30px;
+}
+#bottom_line{
+    float: left;
+    width: 670px;
+    margin-top: 40px;
+    padding-bottom: 67px;
+}
+
+#left_sus{
+    margin-left: 164px;
+    float: left;
+}
+#right_sus{
+    margin-right: 80px;
+    float: right;
+}
